log/build_2025-03-18_15-44-07/arm_gui/stderr.log
  File "/home/nahian/Desktop/tb_ws/install/arm_gui/lib/python3.10/site-packages/arm_gui/gui_run.py", line 48
    tk.Label(frame, text=labels[i],width=14,anchor="e",font=("Helvetica",12),width=15,anchor='w').pack(side=tk.LEFT, padx=5)
                                                                             ^^^^^^^^
SyntaxError: keyword argument repeated: width

